--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
         files: ''
       - id: pytest
         name: pytest
-        entry: bash -c 'PYTHONPATH=. pytest -q --cov=.'
+        entry: bash -c 'PYTHONPATH=. pytest -q'
         language: system
         types: [python]
       - id: bats
@@ -41,3 +41,4 @@ repos:
     rev: 25.1.0
     hooks:
       - id: black
+
