feat(sprint1): scaffold tickets and ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,12 @@ jobs:
       - name: Run pre-commit
         if: steps.changed.outputs.any_changed == 'true'
         run: pre-commit run --show-diff-on-failure --color always --files ${{ steps.changed.outputs.all_changed_files }}
-      - name: Coverage XML
+      - name: Combine coverage
         if: steps.changed.outputs.any_changed == 'true'
-        run: coverage xml
+        run: |
+          coverage combine || true
+          coverage xml
+          coverage report --fail-under=95
       - name: Skip checks
         if: steps.changed.outputs.any_changed == 'false'
         run: echo "Documentation-only change; skipping checks."
