--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
         files: ''
       - id: pytest
         name: pytest
-        entry: bash -c 'PYTHONPATH=. pytest -q'
+        entry: bash -c 'PYTHONPATH=. pytest -q --cov=.'
         language: system
         types: [python]
       - id: bats
