--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# Bytecode and caches
+# Python
 __pycache__/
 *.py[cod]
-
-# Env
 .venv/
 .venv-codex/
+
+# Coverage and lint
+.coverage
+coverage.xml
+htmlcov/
+.ruff_cache/
 
 # Logs
 *.log
@@ -14,6 +18,5 @@ __pycache__/
 *.swo
 *~
 
-# Coverage
-.coverage
-htmlcov/
+# Tests
+tests/tmp/
